--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,6 @@ body{
     margin: 3% 10%;
     line-height: 1;
 }
-
-.location{
-    text-decoration: none;
-    color: rgb(136, 40, 40);
-
+.logo{
+    width: 22px;
 }
